Fix tab badge alignments

--- a/css/_type-badges.scss
+++ b/css/_type-badges.scss
@@ -14,7 +14,7 @@
 }
 
 .nav-tab span {
-	vertical-align: text-bottom;
+	vertical-align: middle;
 }
 
 $badges: (php: $php-active, css: $css-highlight, js: $js-highlight, html: $html-active);
