--- a/css/manage.scss
+++ b/css/manage.scss
@@ -13,6 +13,7 @@ $inactive-color: #ccc;
 		font-size: 16px;
 		width: 16px;
 		height: 16px;
+		vertical-align: middle;
 	}
 
 	.dashicons-clock {
